# my-agent

./: .gitignore  CHANGELOG.md  HARNESS.md  README.md  agent.py  benchmark_harness.py  context_engine.py  context_live_regression.py  context_regression_harness.py  jarvis.config.json  model-baseline.md  performance_trace.py  runtime_config.py  runtime_diagnostics.py  setup.cfg  tool_registry.py  tool_runtime.py  tools.py  way-to-claw-code.md  workspace_inspector.py
benchmark-results/: 2026-04-23_233206_qwen2-5-coder-7b.json  2026-04-23_233206_qwen2-5-coder-7b.md  2026-04-24_004056_qwen2-5-coder-14b.json  2026-04-24_004056_qwen2-5-coder-14b.md  2026-04-24_005305_qwen2-5-coder-14b.json  2026-04-24_005305_qwen2-5-coder-14b.md
benchmarks/: agent_tasks.json  context_live_tasks.json  context_regression_cases.json
context-live-results/: 2026-04-24_100052_qwen2.5-coder-7b.json  2026-04-24_100052_qwen2.5-coder-7b.md  2026-04-24_101142_qwen2.5-coder-7b.json  2026-04-24_101142_qwen2.5-coder-7b.md  2026-04-24_101333_qwen2.5-coder-7b.json  2026-04-24_101333_qwen2.5-coder-7b.md
context-regression-results/: 2026-04-24_093644.json  2026-04-24_093644.md
diagnostic-results/: 2026-04-24_001108_qwen2-5-coder-7b.json  2026-04-24_001108_qwen2-5-coder-7b.md  2026-04-24_005200_qwen2-5-coder-14b.json  2026-04-24_005200_qwen2-5-coder-14b.md  2026-04-24_010037_qwen2-5-coder-14b.json  2026-04-24_010037_qwen2-5-coder-14b.md  2026-04-24_010457_qwen2-5-coder-14b.json  2026-04-24_010457_qwen2-5-coder-14b.md  2026-04-24_104656_qwen2-5-coder-7b.json  2026-04-24_104656_qwen2-5-coder-7b.md  (+4 more)
(+16 files in other folders)
