[metadata]
name = jarvis-agent
version = 0.1.0
description = A local coding agent with a Claude Code style CLI.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = agent, tools
python_requires = >=3.9
install_requires =
    openai>=1.40.0

[options.entry_points]
console_scripts =
    jarvis = agent:main
