[metadata]
name = jarvis-agent
version = 0.1.0
description = A local coding agent with a Claude Code style CLI.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = agent, benchmark_harness, context_engine, context_live_regression, context_regression_harness, runtime_config, runtime_diagnostics, tools, workspace_inspector
python_requires = >=3.9
install_requires =
    openai>=1.40.0

[options.entry_points]
console_scripts =
    jarvis = agent:main
